--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-menubar": "^1.0.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.12.1",
     "@types/node": "20.3.1",
