--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.4.6",
     "@radix-ui/react-menubar": "^1.0.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.12.1",
+    "@stripe/stripe-js": "^1.54.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -21,13 +24,17 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "lucide-react": "^0.244.0",
-    "next": "13.4.5",
+    "next": "^13.4.6",
     "next-sanity": "^4.3.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-redux": "^8.1.0",
+    "react-toast": "^1.0.3",
     "sanity": "^3.12.1",
+    "stripe": "^12.9.0",
     "tailwind-merge": "^1.13.1",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
