--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "next-sanity": "^4.3.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.0",
-    "react-toast": "^1.0.3",
     "sanity": "^3.12.1",
     "stripe": "^12.9.0",
     "tailwind-merge": "^1.13.1",
